cambios de la sesion

--- a/dual/src/main/resources/application.properties
+++ b/dual/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=validate
+
+logging.level.org.hibernate.SQL=off
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
